--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
     <lib.junit-jupiter.version>5.6.2</lib.junit-jupiter.version>
-    <lib.hamcrest-all.version>1.3</lib.hamcrest-all.version>
+    <lib.assertj.version>3.16.1</lib.assertj.version>
   </properties>
 
   <dependencies>
@@ -35,10 +35,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>${lib.hamcrest-all.version}</version>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
       <scope>test</scope>
+      <version>${lib.assertj.version}</version>
     </dependency>
   </dependencies>
 
